# diffpy.srreal

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  LICENSE.rst  LICENSE.txt  LICENSE_DANSE.rst  LICENSE_DANSE.txt  MANIFEST.in  README.md  README.rst  README.txt  SConstruct  TestPairHistogram.py  __init__.py  cookiecutter.json  environment.yml  examples.html  fix_setuptools_chmod.py  genindex.html  index.html  install.html  license.html  objects.inv  py-modindex.html  pyproject.toml  release.html  search.html  searchindex.js  setup.cfg  setup.py
.codespell/: ignore_words.txt
PDFAPI/: Atom.py  Lattice.py  PDFCalculator.py  PDFComponent.py  PDFData.py  PDFParser.py  __init__.py  adps.py  phases.py
_modules/: index.html
_sources/: index.rst.txt  index.txt  install.txt
_static/: documentation_options.js
api/: diffpy.html  diffpy.srreal.example_package.html  diffpy.srreal.html  diffpy.srreal.tests.html  modules.html
conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml  run_test.py
devutils/: README.md  makesdist  tunePeakPrecision.py
diffpy/: __init__.py
docs/: Makefile
examples/: C60bucky.stru  compareC60PDFs.html  compareC60PDFs.py  compareC60PDFs_objcryst.html  compareC60PDFs_objcryst.py  distanceprinter.html  distanceprinter.py  fit_nickel.py  fit_two_phase.py  parallelPDF.html  parallelPDF.py  tunePeakPrecision.py
libsrreal/: .ctags  BaseBondIterator.cpp  BaseBondIterator.hpp  BaseBondPair.hpp  BasePairQuantity.hpp  BaseStructure.cpp  BaseStructure.hpp  Makefile  PairCounter.cpp  PairCounter.hpp  PairQuantity.cpp  PairQuantity.hpp  PointsInSphere.cpp  PointsInSphere.h  R3linalg.hpp  SConstruct  StructureAdapter.hpp  TestR3linalg.cpp  TestVR3Structure.cpp  VR3Structure.hpp  alltests.cpp  bonditerator.cpp  bonditerator.h  bondwidthcalculator.cpp  bondwidthcalculator.h  pdfcalculator.cpp  pdfcalculator.h  profilecalculator.cpp  profilecalculator.h  testsrreal.cpp
news/: ay-cleanings.rst  change-pythonversion.rst  citationfix.rst  cpp-version-update.rst  deprecate-setscattering.rst  devutils.rst  examples.rst  fix-docstring.rst  package-update.rst  pc-blackv2.rst  pre-commit-auto.rst  precommit-deps-update.rst  req.rst  (+3 more)
(+486 files in other folders)
