[build-system]
requires = ["setuptools>=62.0", "setuptools-git-versioning<2", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "diffpy.srreal"
dynamic=['version']
authors = [
  { name="Simon J.L. Billinge group", email="simon.billinge@gmail.com" },
]
maintainers = [
  { name="Simon J.L. Billinge group", email="simon.billinge@gmail.com" },
]
description = "calculators for PDF, bond valence sum, and other quantities based on atom pair interaction."
keywords = ["PDF BVS atom overlap calculator real-space"]
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
	"diffpy.structure",
]
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Education',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
	'Operating System :: Microsoft :: Windows',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: POSIX',
        'Operating System :: Unix',
        'Programming Language :: C++',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
		'Programming Language :: Python :: 3.12',
        'Topic :: Scientific/Engineering :: Chemistry',
        'Topic :: Scientific/Engineering :: Physics',
        'Topic :: Software Development :: Libraries',
]

[project.urls]
Homepage = "https://github.com/diffpy/diffpy.srreal/"
Issues = "https://github.com/diffpy/diffpy.srreal/issues"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["diffpy*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["diffpy.srreal.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
